@@ -39,17 +39,19 @@ class MQConnectionFactoryFactory {
 
   // There are many properties that can be set on an MQ Connection Factory, but these are the most commonly-used
   // for both direct and client connections. If you use TLS for client connectivity, properties related to that
-  // (keystore, certificates, ciphers etc) must be set independently.  That could be done in a customizer() method.
+  // (keystore, certificates, ciphers etc) must be set independently. That could be done in a customizer() method.
   public <T extends MQConnectionFactory> T createConnectionFactory(Class<T> factoryClass) {
+    String err = null;
     try {
       T cf = createConnectionFactoryInstance(factoryClass);
 
       // Must provide a queue manager name.
       String qmName = this.properties.getQueueManager();
       if (isNullOrEmpty(qmName)) {
-        throw new JMSException("Must provide queue manager name");
+        err = "Must provide queue manager name as a property";
+        throw new JMSException(err);
       }
-      
+
       cf.setStringProperty(WMQConstants.WMQ_QUEUE_MANAGER, this.properties.getQueueManager());
 
       // Use the channel name to decide whether to try to connect locally or as a client
@@ -80,13 +82,13 @@ class MQConnectionFactoryFactory {
     }
     catch (JMSException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException
         | SecurityException ex) {
-      throw new IllegalStateException("Unable to create MQConnectionFactory", ex);
+      throw new IllegalStateException("Unable to create MQConnectionFactory" + ((err != null) ? (": " + err) : ""), ex);
     }
   }
 
   private <T extends MQConnectionFactory> T createConnectionFactoryInstance(Class<T> factoryClass)
       throws InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
-    return factoryClass.getConstructor(String.class).newInstance();
+    return factoryClass.getConstructor().newInstance();
   }
 
   private void customize(MQConnectionFactory connectionFactory) {
